--- a/storiesof/templates/storiesof/linkedin_homepage.html
+++ b/storiesof/templates/storiesof/linkedin_homepage.html
@@ -7,9 +7,9 @@
                             <div class="container">
                                 <div class="row align-items-center">
                                     <div class="col-lg-6" data-aos="fade-up">
-                                        <h1 class="page-header-title">Each company has it own story. And all stories where built with amazing people</h1>
+                                        <h1 class="page-header-title">Each company has it own story. And all stories where built by amazing people!</h1>
                                         <p class="page-header-text mb-5">Create your own Linkedin company portfolio in 5 minutes</p>
-                                        <a class="btn btn-teal btn-marketing rounded-pill lift lift-sm" href="{% url 'linkedin_auth_url' %}">Start your story now!<i class="fas fa-arrow-right ml-1"></i></a><a class="btn btn-link btn-marketing" href="https://docs.startbootstrap.com/sb-ui-kit-pro/quickstart">Documentation</a>
+                                        <a class="btn btn-teal btn-marketing rounded-pill lift lift-sm" href="{% url 'linkedin_auth_url' %}"><i class="fab fa-linkedin"></i> Start your story now!<i class="fas fa-arrow-right ml-1"></i></a>
                                     </div>
                                     <div class="col-lg-6 d-none d-lg-block" data-aos="fade-up" data-aos-delay="50"><img class="img-fluid" src="static/assets/img/report_example.png" /></div>
                                 </div>
@@ -40,15 +40,14 @@
                                 <div class="col-lg-4 text-center mb-5">
                                     <div class="display-1 font-weight-bold text-gray-400">{{ profils_linkedin_nb }}+</div>
                                     <div class="h5">Teammates aboard</div>
-                                    <p>And more of them everyday are joining the adventure</p>
+                                    <p>And more of them are joining everyday the adventure</p>
                                 </div>
                                 <div class="col-lg-4 text-center mb-5">
-                                    <div class="display-1 font-weight-bold text-gray-400">{{ reports_nb }}+</div>
-                                    <div class="h5">Custom/Extended Utilites</div>
-                                    <p>We've extended and created new utility classes to give you more control over your content with minimal custom CSS.</p>
+                                    <div class="display-1 font-weight-bold text-gray-400">10+</div>
+                                    <div class="h5">Story books downloaded</div>
+                                    <p></p>
                                 </div>
                             </div>
-                            <div class="text-center"><a class="btn btn-marketing btn-primary rounded-pill lift lift-sm" href="https://docs.startbootstrap.com/sb-ui-kit-pro/quickstart">View Documentation</a></div>
                         </div>
                         <div class="svg-border-rounded text-white">
                             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 144.54 17.34" preserveAspectRatio="none" fill="currentColor"><path d="M144.54,17.34H0V0H144.54ZM0,0S32.36,17.34,72.27,17.34,144.54,0,144.54,0"></path></svg>
