--- a/storiesof/templates/storiesof/linkedin_homepage.html
+++ b/storiesof/templates/storiesof/linkedin_homepage.html
@@ -7,7 +7,7 @@
                             <div class="container">
                                 <div class="row align-items-center">
                                     <div class="col-lg-6" data-aos="fade-up">
-                                        <h1 class="page-header-title">Each company has it own story. And all stories where built by amazing people!</h1>
+                                        <h1 class="page-header-title">Each company has it own story. And all stories were built by amazing people!</h1>
                                         <p class="page-header-text mb-5">Create your own Linkedin company portfolio in 5 minutes</p>
                                         <a class="btn btn-teal btn-marketing rounded-pill lift lift-sm" href="{% url 'linkedin_auth_url' %}"><i class="fab fa-linkedin"></i> Start your story now!<i class="fas fa-arrow-right ml-1"></i></a>
                                     </div>
