--- a/storiesof/templates/storiesof/linkedin_homepage.html
+++ b/storiesof/templates/storiesof/linkedin_homepage.html
@@ -7,9 +7,9 @@
                             <div class="container">
                                 <div class="row align-items-center">
                                     <div class="col-lg-6" data-aos="fade-up">
-                                        <h1 class="page-header-title">Each company has it own story. And all stories were built by amazing people!</h1>
-                                        <p class="page-header-text mb-5">Create your own Linkedin company portfolio in 5 minutes</p>
-                                        <a class="btn btn-teal btn-marketing rounded-pill lift lift-sm" href="{% url 'linkedin_auth_url' %}"><i class="fab fa-linkedin"></i> Start your story now!<i class="fas fa-arrow-right ml-1"></i></a>
+                                        <h1 class="page-header-title">Stories, the ultimate trombinoscope for HR managers.</h1>
+                                        <p class="page-header-text mb-5">Each company has it own story. And all stories were built by amazing people! Create your own Linkedin company teammates trombinoscope in 5 minutes</p>
+                                        <a class="btn btn-teal btn-marketing rounded-pill lift lift-sm" href="{% url 'linkedin_auth_url' %}"><i class="fab fa-linkedin"></i> Start your trombinoscope now!<i class="fas fa-arrow-right ml-1"></i></a>
                                     </div>
                                     <div class="col-lg-6 d-none d-lg-block" data-aos="fade-up" data-aos-delay="50"><img class="img-fluid" src="static/assets/img/report_example.png" /></div>
                                 </div>
@@ -19,7 +19,50 @@
                             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 144.54 17.34" preserveAspectRatio="none" fill="currentColor"><path d="M144.54,17.34H0V0H144.54ZM0,0S32.36,17.34,72.27,17.34,144.54,0,144.54,0"></path></svg>
                         </div>
                     </header>
-                    
+                    <section class="bg-white py-10">
+                        <div class="container">
+                            <div class="row text-center">
+                                <div class="col-lg-4 mb-5 mb-lg-0">
+                                    <div class="icon-stack icon-stack-xl bg-gradient-primary-to-secondary text-white mb-4"><i class="fas fa-book"></i><path d="M12 2.69l5.66 5.66a8 8 0 1 1-11.31 0z"></path></svg></div>
+                                    <h2>Step 1:</h2>
+                                    <h2>Create a private trombinoscope</h2>
+                                    <p class="mb-0">By creating a trombinoscope you get a unique private link you can send to all your teammates you want to appear.</p>
+                                </div>
+                                <div class="col-lg-4 mb-5 mb-lg-0">
+                                    <div class="icon-stack icon-stack-xl bg-gradient-primary-to-secondary text-white mb-4"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 640 512" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="svg-inline--fa fa-user-check fa-w-20" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="user-check" role="img" data-fa-i2svg=""><path fill="currentColor" d="M224 256c70.7 0 128-57.3 128-128S294.7 0 224 0 96 57.3 96 128s57.3 128 128 128zm89.6 32h-16.7c-22.2 10.2-46.9 16-72.9 16s-50.6-5.8-72.9-16h-16.7C60.2 288 0 348.2 0 422.4V464c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48v-41.6c0-74.2-60.2-134.4-134.4-134.4zm323-128.4l-27.8-28.1c-4.6-4.7-12.1-4.7-16.8-.1l-104.8 104-45.5-45.8c-4.6-4.7-12.1-4.7-16.8-.1l-28.1 27.9c-4.7 4.6-4.7 12.1-.1 16.8l81.7 82.3c4.6 4.7 12.1 4.7 16.8.1l141.3-140.2c4.6-4.7 4.7-12.2.1-16.8z"></path></svg><polyline points="16 18 22 12 16 6"></polyline><polyline points="8 6 2 12 8 18"></polyline></svg></div>
+                                    <h2>Step 2:</h2>
+                                    <h2>Send your unique trombinoscope link to your teammates</h2>
+                                    <p class="mb-0">Each teammate that clicks on your unique link, she or he will appear in your trombinoscope</p>
+                                </div>
+                                <div class="col-lg-4">
+                                    <div class="icon-stack icon-stack-xl bg-gradient-primary-to-secondary text-white mb-4"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-truck"><rect x="1" y="3" width="15" height="13"></rect><polygon points="16 8 20 8 23 11 23 16 16 16 16 8"></polygon><circle cx="5.5" cy="18.5" r="2.5"></circle><circle cx="18.5" cy="18.5" r="2.5"></circle></svg></div>
+                                    <h2>Step 3:</h2>
+                                    <h2>Order your company book trombinoscope</h2>
+                                    <p class="mb-0">Whatch the e-trombinoscope. Then order an amazing luxury book trombinoscope to keep track of who worked with you each year.</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="svg-border-rounded text-light">
+                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 144.54 17.34" preserveAspectRatio="none" fill="currentColor"><path d="M144.54,17.34H0V0H144.54ZM0,0S32.36,17.34,72.27,17.34,144.54,0,144.54,0"></path></svg>
+                        </div>
+                    </section>
+                    <section class="bg-light py-10">
+                        <div class="container z-1">
+                            <div class="card mb-5 aos-init aos-animate" data-aos="fade-right">
+                                <div class="row no-gutters">
+                                    <div class="col-md-6"><img class="img-fluid" src="../../static/assets/img/luxury_book.png" alt="..."></div>
+                                    <div class="col-md-6">
+                                        <div class="card-body d-flex align-items-center justify-content-center h-100 flex-column">
+                                            <h3 class="card-title font-weight-bold text-uppercase mb-2">Luxury book</h3>
+                                            <p class="card-text font-weight-light mb-4">90$</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            
+                        </div>
+                        
+                    </section>
                     
                     <section class="bg-light py-10">
                         <div class="container">
@@ -27,15 +70,15 @@
                                 <div class="col-lg-8">
                                     <div class="text-center mb-10">
                                         <h2>Storytellers breakthroughs</h2>
-                                        <p class="lead">Because a lot of you guys already wrote their stories!</p>
+                                        <p class="lead">Because a lot of you guys already created their company trombinoscope!</p>
                                     </div>
                                 </div>
                             </div>
                             <div class="row">
                                 <div class="col-lg-4 text-center mb-5">
                                     <div class="display-1 font-weight-bold text-gray-400">{{ projects_nb }}+</div>
-                                    <div class="h5">Stories</div>
-                                    <p>Created by our community for their teammates</p>
+                                    <div class="h5">trombinoscopes</div>
+                                    <p>Created by HR managers for their teammates</p>
                                 </div>
                                 <div class="col-lg-4 text-center mb-5">
                                     <div class="display-1 font-weight-bold text-gray-400">{{ profils_linkedin_nb }}+</div>
@@ -44,8 +87,8 @@
                                 </div>
                                 <div class="col-lg-4 text-center mb-5">
                                     <div class="display-1 font-weight-bold text-gray-400">10+</div>
-                                    <div class="h5">Story books downloaded</div>
-                                    <p></p>
+                                    <div class="h5">Trombinoscope books sent</div>
+                                    <p>We print and send amazing trombinoscopes to your company office.</p>
                                 </div>
                             </div>
                         </div>
