--- a/templates/base.html
+++ b/templates/base.html
@@ -38,7 +38,7 @@
                                        
                                     </li>
                                 </ul>
-                                <a class="btn-teal btn rounded-pill px-4 ml-lg-4" href="{% url 'linkedin_auth_url' %}"><i class="fab fa-linkedin"></i> Start your story now!<i class="fas fa-arrow-right ml-1"></i></a>
+                                <a class="btn-teal btn rounded-pill px-4 ml-lg-4" href="{% url 'linkedin_auth_url' %}"><i class="fab fa-linkedin"></i> Start your trombinoscope now!<i class="fas fa-arrow-right ml-1"></i></a>
                             </div>
                         </div>
                     </nav>
