--- a/storiesof/templates/storiesof/linkedin.html
+++ b/storiesof/templates/storiesof/linkedin.html
@@ -17,7 +17,7 @@
                                         <hr class="my-2" color="#fff">
                                         <h1 class="page-header-title mb-3">Steps</h1>
 
-                                        <div class="badge badge-pill badge-primary-soft text-primary badge-marketing mb-3">Step n°1: Send this personal link to each teammate you want to join this adventure</div>
+                                        <div class="badge badge-pill badge-primary-soft text-primary badge-marketing mb-3">Step n°1: Send this personal link to each teammate you want to appear on you team trombinoscope.</div>
                                         <p>
                                         <a class="btn-teal btn rounded-pill px-4 ml-lg-4" onclick="copyToClipboard('<p>{{ linkedin_authorization_code_url_custom }}</p>')"><i class="fas fa-arrow-right ml-1"></i> Click to copy clipboard to get the magic link <i class="fas fa-arrow-left ml-1"></i></a>
                                         <script type="text/javascript">
@@ -30,10 +30,10 @@
                                         }
                                         </script>
                                         </p>
-                                        <div class="badge badge-pill badge-primary-soft text-primary badge-marketing mb-3">Step n°2: When everyone is aboard, download the book of your story</div>
+                                        <div class="badge badge-pill badge-primary-soft text-primary badge-marketing mb-3">Step n°2: When everyone is aboard, download the trombinoscope to see the result. And if everything is good for you, buy the physical luxury trombinoscope.</div>
 
                                         
-                                            <a class="btn-teal btn rounded-pill px-4 ml-lg-4" href="../../report_export/{{ profil_linkedin_admin_id }}/{{ project_id }}">Download your company story now!</a>
+                                            <a class="btn-teal btn rounded-pill px-4 ml-lg-4" href="../../report_export/{{ profil_linkedin_admin_id }}/{{ project_id }}">Watch your trombinoscope</a>
                                         </p>
                                         
 
@@ -47,13 +47,42 @@
                             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 144.54 17.34" preserveAspectRatio="none" fill="currentColor"><path d="M144.54,17.34H0V0H144.54ZM0,0S32.36,17.34,72.27,17.34,144.54,0,144.54,0"></path></svg>
                         </div>
                     </header>
+
+                    <section class="bg-white py-10">
+                        <div class="container">
+                            <div class="row text-center">
+                                <div class="col-lg-4 mb-5 mb-lg-0">
+                                    <div class="icon-stack icon-stack-xl bg-green-soft text-white mb-4"><i class="fas fa-book"></i><path d="M12 2.69l5.66 5.66a8 8 0 1 1-11.31 0z"></path></svg></div>
+                                    <h2>Step 1:</h2>
+                                    <h2>Create a private trombinoscope</h2>
+                                    <p class="mb-0">By creating a trombinoscope you get a unique private link you can send to all your teammates you want to appear.</p>
+                                </div>
+                                <div class="col-lg-4 mb-5 mb-lg-0">
+                                    <div class="icon-stack icon-stack-xl bg-green text-white mb-4"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 640 512" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="svg-inline--fa fa-user-check fa-w-20" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="user-check" role="img" data-fa-i2svg=""><path fill="currentColor" d="M224 256c70.7 0 128-57.3 128-128S294.7 0 224 0 96 57.3 96 128s57.3 128 128 128zm89.6 32h-16.7c-22.2 10.2-46.9 16-72.9 16s-50.6-5.8-72.9-16h-16.7C60.2 288 0 348.2 0 422.4V464c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48v-41.6c0-74.2-60.2-134.4-134.4-134.4zm323-128.4l-27.8-28.1c-4.6-4.7-12.1-4.7-16.8-.1l-104.8 104-45.5-45.8c-4.6-4.7-12.1-4.7-16.8-.1l-28.1 27.9c-4.7 4.6-4.7 12.1-.1 16.8l81.7 82.3c4.6 4.7 12.1 4.7 16.8.1l141.3-140.2c4.6-4.7 4.7-12.2.1-16.8z"></path></svg><polyline points="16 18 22 12 16 6"></polyline><polyline points="8 6 2 12 8 18"></polyline></svg></div>
+                                    <h2>Step 2:</h2>
+                                    <h2>Send your unique trombinoscope link to your teammates</h2>
+                                    <p class="mb-0">Each teammate that clicks on your unique link, she or he will appear in your trombinoscope</p>
+                                </div>
+                                <div class="col-lg-4">
+                                    <div class="icon-stack icon-stack-xl bg-yellow-soft text-white mb-4"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-truck"><rect x="1" y="3" width="15" height="13"></rect><polygon points="16 8 20 8 23 11 23 16 16 16 16 8"></polygon><circle cx="5.5" cy="18.5" r="2.5"></circle><circle cx="18.5" cy="18.5" r="2.5"></circle></svg></div>
+                                    <h2>Step 3:</h2>
+                                    <h2>Order your company book trombinoscope</h2>
+                                    <p class="mb-0">Whatch the e-trombinoscope. Then order an amazing luxury book trombinoscope to keep track of who worked with you each year.</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="svg-border-rounded text-light">
+                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 144.54 17.34" preserveAspectRatio="none" fill="currentColor"><path d="M144.54,17.34H0V0H144.54ZM0,0S32.36,17.34,72.27,17.34,144.54,0,144.54,0"></path></svg>
+                        </div>
+                    </section>
+
                     <section class="bg-light pb-10">
                         <div class="container">
                             <div class="row">
                                 <div class="col-md-6 col-xl-4 mb-5 mt-n5">
                                     <a class="card card-portfolio h-100" href="../../linkedin_admin/{{ profil_linkedin_admin_id }}">
                                             <img class="card-img-top" src="https://source.unsplash.com/n3sqjJzZiBM/400x300" alt="..." />
-                                            <div class="card-title"><p></p><p class="btn btn-teal btn-marketing rounded-pill lift lift-sm" href=""><i class="fas fa-arrow-left ml-1"></i>Go back to your stories dashboard</p></div></a>
+                                            <div class="card-title"><p></p><p class="btn btn-teal btn-marketing rounded-pill lift lift-sm" href=""><i class="fas fa-arrow-left ml-1"></i>Go back to your trombinoscope dashboard</p></div></a>
                                 </div>
                                 {% for profil_linkedin in profils_linkedin %}
 
@@ -77,8 +106,7 @@
                     <div class="container z-1">
                             <div class="card mb-5 aos-init aos-animate" data-aos="fade-right">
                                 <div class="row no-gutters">
-                                    <div class="col-md-6"><img class="img-fluid" src="../../static/assets/img/luxury_book.png
-                                        " alt="..."></div>
+                                    <div class="col-md-6"><img class="img-fluid" src="../../static/assets/img/luxury_book.png" alt="..."></div>
                                     <div class="col-md-6">
                                         <div class="card-body d-flex align-items-center justify-content-center h-100 flex-column">
                                             <h3 class="card-title font-weight-bold text-uppercase mb-2">Luxury book</h3>
