--- a/storiesof/templates/storiesof/linkedin_admin.html
+++ b/storiesof/templates/storiesof/linkedin_admin.html
@@ -49,6 +49,8 @@
                                     <h2>Step 1:</h2>
                                     <h2>Create a private trombinoscope</h2>
                                     <p class="mb-0">By creating a trombinoscope you get a unique private link you can send to all your teammates you want to appear.</p>
+                                    <hr class="my-2" />
+                                    <p class="btn btn-teal btn-marketing rounded-pill lift lift-sm" href="">Create a new trombinoscope!<i class="fas fa-arrow-right ml-1"></i></p>
                                 </div>
                                 <div class="col-lg-4 mb-5 mb-lg-0">
                                     <div class="icon-stack icon-stack-xl bg-yellow-soft text-white mb-4"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 640 512" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="svg-inline--fa fa-user-check fa-w-20" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="user-check" role="img" data-fa-i2svg=""><path fill="currentColor" d="M224 256c70.7 0 128-57.3 128-128S294.7 0 224 0 96 57.3 96 128s57.3 128 128 128zm89.6 32h-16.7c-22.2 10.2-46.9 16-72.9 16s-50.6-5.8-72.9-16h-16.7C60.2 288 0 348.2 0 422.4V464c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48v-41.6c0-74.2-60.2-134.4-134.4-134.4zm323-128.4l-27.8-28.1c-4.6-4.7-12.1-4.7-16.8-.1l-104.8 104-45.5-45.8c-4.6-4.7-12.1-4.7-16.8-.1l-28.1 27.9c-4.7 4.6-4.7 12.1-.1 16.8l81.7 82.3c4.6 4.7 12.1 4.7 16.8.1l141.3-140.2c4.6-4.7 4.7-12.2.1-16.8z"></path></svg><polyline points="16 18 22 12 16 6"></polyline><polyline points="8 6 2 12 8 18"></polyline></svg></div>
@@ -60,7 +62,7 @@
                                     <div class="icon-stack icon-stack-xl bg-yellow-soft text-white mb-4"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-truck"><rect x="1" y="3" width="15" height="13"></rect><polygon points="16 8 20 8 23 11 23 16 16 16 16 8"></polygon><circle cx="5.5" cy="18.5" r="2.5"></circle><circle cx="18.5" cy="18.5" r="2.5"></circle></svg></div>
                                     <h2>Step 3:</h2>
                                     <h2>Order your company book trombinoscope</h2>
-                                    <p class="mb-0">Whatch the e-trombinoscope. Then order an amazing luxury book trombinoscope to keep track of who worked with you each year.</p>
+                                    <p class="mb-0">Watch the e-trombinoscope. Then order an amazing luxury book trombinoscope to keep track of who worked with you each year.</p>
                                 </div>
                             </div>
                         </div>
