--- a/storiesof/templates/storiesof/linkedin_homepage.html
+++ b/storiesof/templates/storiesof/linkedin_homepage.html
@@ -38,7 +38,7 @@
                                     <div class="icon-stack icon-stack-xl bg-gradient-primary-to-secondary text-white mb-4"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-truck"><rect x="1" y="3" width="15" height="13"></rect><polygon points="16 8 20 8 23 11 23 16 16 16 16 8"></polygon><circle cx="5.5" cy="18.5" r="2.5"></circle><circle cx="18.5" cy="18.5" r="2.5"></circle></svg></div>
                                     <h2>Step 3:</h2>
                                     <h2>Order your company book trombinoscope</h2>
-                                    <p class="mb-0">Whatch the e-trombinoscope. Then order an amazing luxury book trombinoscope to keep track of who worked with you each year.</p>
+                                    <p class="mb-0">Watch the e-trombinoscope. Then order an amazing luxury book trombinoscope to keep track of who worked with you each year.</p>
                                 </div>
                             </div>
                         </div>
