--- a/storiesof/templates/storiesof/linkedin_admin.html
+++ b/storiesof/templates/storiesof/linkedin_admin.html
@@ -50,7 +50,9 @@
                                     <h2>Create a private trombinoscope</h2>
                                     <p class="mb-0">By creating a trombinoscope you get a unique private link you can send to all your teammates you want to appear.</p>
                                     <hr class="my-2" />
-                                    <p class="btn btn-teal btn-marketing rounded-pill lift lift-sm" href="">Create a new trombinoscope!<i class="fas fa-arrow-right ml-1"></i></p>
+                                    <a href="../create_project/{{ profil_linkedin_admin_id }}">
+                                        <p class="btn btn-teal btn-marketing rounded-pill lift lift-sm" href="">Create a new trombinoscope!<i class="fas fa-arrow-right ml-1"></i></p>
+                                    </a>
                                 </div>
                                 <div class="col-lg-4 mb-5 mb-lg-0">
                                     <div class="icon-stack icon-stack-xl bg-yellow-soft text-white mb-4"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 640 512" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="svg-inline--fa fa-user-check fa-w-20" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="user-check" role="img" data-fa-i2svg=""><path fill="currentColor" d="M224 256c70.7 0 128-57.3 128-128S294.7 0 224 0 96 57.3 96 128s57.3 128 128 128zm89.6 32h-16.7c-22.2 10.2-46.9 16-72.9 16s-50.6-5.8-72.9-16h-16.7C60.2 288 0 348.2 0 422.4V464c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48v-41.6c0-74.2-60.2-134.4-134.4-134.4zm323-128.4l-27.8-28.1c-4.6-4.7-12.1-4.7-16.8-.1l-104.8 104-45.5-45.8c-4.6-4.7-12.1-4.7-16.8-.1l-28.1 27.9c-4.7 4.6-4.7 12.1-.1 16.8l81.7 82.3c4.6 4.7 12.1 4.7 16.8.1l141.3-140.2c4.6-4.7 4.7-12.2.1-16.8z"></path></svg><polyline points="16 18 22 12 16 6"></polyline><polyline points="8 6 2 12 8 18"></polyline></svg></div>
@@ -77,14 +79,14 @@
                             <h2 class="mb-4">Recent trombinoscopes</h2>
                             <div class="row">
                                 <div class="col-xl-3 col-lg-4 col-md-6 mb-5">
-                                    <a class="card lift h-100" href="../create_project/{{ profil_linkedin_admin_id }}"
-                                        ><div class="card-flag card-flag-dark card-flag-top-right card-flag-lg">{{ projects_nb }} trombinoscopes</div>
+                                    <a class="card lift h-100" href="../create_project/{{ profil_linkedin_admin_id }}">
+                                        <div class="card-flag card-flag-dark card-flag-top-right card-flag-lg">{{ projects_nb }} trombinoscopes</div>
                                         <img class="card-img-top" src="{{ profil_admin.photo }}" alt="..." />
-
                                         <div class="card-body p-3">
-                                            <p class="btn btn-teal btn-marketing rounded-pill lift lift-sm" href="">Create a new trombinoscope!<i class="fas fa-arrow-right ml-1"></i></p>
-                                        </div></a
-                                    >
+                                            <p class="btn btn-teal btn-marketing rounded-pill lift lift-sm" href="">Create a new trombinoscope!<i class="fas fa-arrow-right ml-1"></i>
+                                            </p>
+                                        </div>
+                                    </a>
                                 </div>
                                 {% for project in projects %}
 
