--- a/storiesof/templates/storiesof/linkedin.html
+++ b/storiesof/templates/storiesof/linkedin.html
@@ -60,7 +60,7 @@
                                     <p class="mb-0">Each teammate that clicks on your unique link, she or he will appear in your trombinoscope</p>
                                     <hr class="my-2" />
                                     <p>
-                                        <a class="btn-teal btn rounded-pill px-4 ml-lg-4 text-white" onclick="copyToClipboard('<p>{{ linkedin_authorization_code_url_custom }}</p>')"><i class="fas fa-arrow-right ml-1"></i> Click to copy clipboard and get the magic link <i class="fas fa-arrow-left ml-1"></i></a>
+                                        <a class="btn-teal btn rounded-pill px-4 ml-lg-4 text-white" onclick="copyToClipboard('<p>{{ linkedin_authorization_code_url_custom }}</p>')"><i class="fas fa-arrow-right ml-1"></i> Click to copy to yout clipboard and get the magic link <i class="fas fa-arrow-left ml-1"></i></a>
                                         <script type="text/javascript">
                                         function copyToClipboard(element) {
                                             var $temp = $("<input>");
