--- a/storiesof/templates/storiesof/linkedin_homepage.html
+++ b/storiesof/templates/storiesof/linkedin_homepage.html
@@ -53,8 +53,7 @@
                                     <div class="col-md-6"><img class="img-fluid" src="../../static/assets/img/luxury_book.png" alt="..."></div>
                                     <div class="col-md-6">
                                         <div class="card-body d-flex align-items-center justify-content-center h-100 flex-column">
-                                            <h3 class="card-title font-weight-bold text-uppercase mb-2">Luxury book</h3>
-                                            <p class="card-text font-weight-light mb-4">90$</p>
+                                            <h3 class="card-title font-weight-bold text-uppercase mb-2">Luxury Trombi</h3>
                                         </div>
                                     </div>
                                 </div>
