--- a/storiesof/templates/storiesof/linkedin_homepage.html
+++ b/storiesof/templates/storiesof/linkedin_homepage.html
@@ -48,13 +48,37 @@
                     </section>
                     <section class="bg-light py-10">
                         <div class="container z-1">
+                            <div class="text-center mb-10">
+                                        <h2>Order a unique trombinoscope</h2>
+                                        <p class="lead">Keep track of who you worked with during each year!</p>
+                                    </div>
                             <div class="card mb-5 aos-init aos-animate" data-aos="fade-right">
                                 <div class="row no-gutters">
                                     <div class="col-md-6"><img class="img-fluid" src="../../static/assets/img/luxury_book.png" alt="..."></div>
                                     <div class="col-md-6">
                                         <div class="card-body d-flex align-items-center justify-content-center h-100 flex-column">
                                             <h3 class="card-title font-weight-bold text-uppercase mb-2">Luxury Trombi</h3>
+                                            <p class="card-text font-weight-light mb-4">Our photo albums with a fabric cover are real art books shaped by hand. A unique and timeless offer.</p>
+                                            <ul class="fa-ul pricing-list">
+                                                <li class="pricing-list-item">
+                                                    <span class="fa-li"><svg class="svg-inline--fa fa-check-circle fa-w-16 text-teal" aria-hidden="true" focusable="false" data-prefix="far" data-icon="check-circle" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" data-fa-i2svg=""><path fill="currentColor" d="M256 8C119.033 8 8 119.033 8 256s111.033 248 248 248 248-111.033 248-248S392.967 8 256 8zm0 48c110.532 0 200 89.451 200 200 0 110.532-89.451 200-200 200-110.532 0-200-89.451-200-200 0-110.532 89.451-200 200-200m140.204 130.267l-22.536-22.718c-4.667-4.705-12.265-4.736-16.97-.068L215.346 303.697l-59.792-60.277c-4.667-4.705-12.265-4.736-16.97-.069l-22.719 22.536c-4.705 4.667-4.736 12.265-.068 16.971l90.781 91.516c4.667 4.705 12.265 4.736 16.97.068l172.589-171.204c4.704-4.668 4.734-12.266.067-16.971z"></path></svg><!-- <i class="far fa-check-circle text-teal"></i> --></span><span class="text-dark">Hard cover covered with high-end fabric,</span>
+                                                </li>
+                                                <li class="pricing-list-item">
+                                                    <span class="fa-li"><svg class="svg-inline--fa fa-check-circle fa-w-16 text-teal" aria-hidden="true" focusable="false" data-prefix="far" data-icon="check-circle" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" data-fa-i2svg=""><path fill="currentColor" d="M256 8C119.033 8 8 119.033 8 256s111.033 248 248 248 248-111.033 248-248S392.967 8 256 8zm0 48c110.532 0 200 89.451 200 200 0 110.532-89.451 200-200 200-110.532 0-200-89.451-200-200 0-110.532 89.451-200 200-200m140.204 130.267l-22.536-22.718c-4.667-4.705-12.265-4.736-16.97-.068L215.346 303.697l-59.792-60.277c-4.667-4.705-12.265-4.736-16.97-.069l-22.719 22.536c-4.705 4.667-4.736 12.265-.068 16.971l90.781 91.516c4.667 4.705 12.265 4.736 16.97.068l172.589-171.204c4.704-4.668 4.734-12.266.067-16.971z"></path></svg><!-- <i class="far fa-check-circle text-teal"></i> --></span><span class="text-dark">personalized title in artisanal gilding,</span>
+                                                </li>
+                                                <li class="pricing-list-item">
+                                                    <span class="fa-li"><svg class="svg-inline--fa fa-check-circle fa-w-16 text-teal" aria-hidden="true" focusable="false" data-prefix="far" data-icon="check-circle" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" data-fa-i2svg=""><path fill="currentColor" d="M256 8C119.033 8 8 119.033 8 256s111.033 248 248 248 248-111.033 248-248S392.967 8 256 8zm0 48c110.532 0 200 89.451 200 200 0 110.532-89.451 200-200 200-110.532 0-200-89.451-200-200 0-110.532 89.451-200 200-200m140.204 130.267l-22.536-22.718c-4.667-4.705-12.265-4.736-16.97-.068L215.346 303.697l-59.792-60.277c-4.667-4.705-12.265-4.736-16.97-.069l-22.719 22.536c-4.705 4.667-4.736 12.265-.068 16.971l90.781 91.516c4.667 4.705 12.265 4.736 16.97.068l172.589-171.204c4.704-4.668 4.734-12.266.067-16.971z"></path></svg><!-- <i class="far fa-check-circle text-teal"></i> --></span><span class="text-dark">sewing binding,</span>
+                                                </li>
+                                                <li class="pricing-list-item">
+                                                    <span class="fa-li"><svg class="svg-inline--fa fa-check-circle fa-w-16 text-teal" aria-hidden="true" focusable="false" data-prefix="far" data-icon="check-circle" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" data-fa-i2svg=""><path fill="currentColor" d="M256 8C119.033 8 8 119.033 8 256s111.033 248 248 248 248-111.033 248-248S392.967 8 256 8zm0 48c110.532 0 200 89.451 200 200 0 110.532-89.451 200-200 200-110.532 0-200-89.451-200-200 0-110.532 89.451-200 200-200m140.204 130.267l-22.536-22.718c-4.667-4.705-12.265-4.736-16.97-.068L215.346 303.697l-59.792-60.277c-4.667-4.705-12.265-4.736-16.97-.069l-22.719 22.536c-4.705 4.667-4.736 12.265-.068 16.971l90.781 91.516c4.667 4.705 12.265 4.736 16.97.068l172.589-171.204c4.704-4.668 4.734-12.266.067-16.971z"></path></svg><!-- <i class="far fa-check-circle text-teal"></i> --></span><span class="text-dark">meticulous finishes,</span>
+                                                </li>
+                                                <li class="pricing-list-item">
+                                                    <span class="fa-li"><svg class="svg-inline--fa fa-check-circle fa-w-16 text-teal" aria-hidden="true" focusable="false" data-prefix="far" data-icon="check-circle" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" data-fa-i2svg=""><path fill="currentColor" d="M256 8C119.033 8 8 119.033 8 256s111.033 248 248 248 248-111.033 248-248S392.967 8 256 8zm0 48c110.532 0 200 89.451 200 200 0 110.532-89.451 200-200 200-110.532 0-200-89.451-200-200 0-110.532 89.451-200 200-200m140.204 130.267l-22.536-22.718c-4.667-4.705-12.265-4.736-16.97-.068L215.346 303.697l-59.792-60.277c-4.667-4.705-12.265-4.736-16.97-.069l-22.719 22.536c-4.705 4.667-4.736 12.265-.068 16.971l90.781 91.516c4.667 4.705 12.265 4.736 16.97.068l172.589-171.204c4.704-4.668 4.734-12.266.067-16.971z"></path></svg><!-- <i class="far fa-check-circle text-teal"></i> --></span><span class="text-dark">high-end creative papers</span>
+                                                </li>
+                                                
+                                            </ul>
                                         </div>
+                                        
                                     </div>
                                 </div>
                             </div>
