enlever les modif ariticielle pour voir Git

--- a/storiesof/templates/storiesof/linkedin_admin.html
+++ b/storiesof/templates/storiesof/linkedin_admin.html
@@ -47,7 +47,7 @@
                                 <div class="col-lg-4 mb-5 mb-lg-0">
                                     <div class="icon-stack icon-stack-xl bg-green text-white mb-4"><i class="fas fa-book"></i><path d="M12 2.69l5.66 5.66a8 8 0 1 1-11.31 0z"></path></svg></div>
                                     <h2>Step 1:</h2>
-                                    <h2>Create a private 2 trombinoscope</h2>
+                                    <h2>Create a private trombinoscope</h2>
                                     <p class="mb-0">By creating a trombinoscope you get a unique private link you can send to all your teammates you want to appear.</p>
                                     <hr class="my-2" />
                                     <a href="../create_project/{{ profil_linkedin_admin_id }}">
